fixed minor style issues on safari

--- a/src/app/feature/public/ddx-kyc-pages.scss
+++ b/src/app/feature/public/ddx-kyc-pages.scss
@@ -8,8 +8,6 @@ $ddx-kyc-header-height: 50px;
   background-color: $ddx-dark-main;
 
   header {
-    display: flex;
-    flex-direction: column;
     width: 100%;
     height: $ddx-kyc-header-height;
     margin-bottom: 15px;
