--- a/src/styles/kit/_typography.scss
+++ b/src/styles/kit/_typography.scss
@@ -5,14 +5,14 @@
 .title,
 h1 {
   font-size: 26px;
-  line-height: 26px;
+  line-height: 35px;
   font-weight: bolder;
 }
 
 .headline,
 h2 {
   font-size: 26px;
-  line-height: 26px;
+  line-height: 33px;
   font-weight: normal;
 }
 
